Changes twitter to bsky

--- a/src/_posts/2024-12-12-RubyConf-2024.md
+++ b/src/_posts/2024-12-12-RubyConf-2024.md
@@ -10,7 +10,7 @@ What a blast! Attending RubyConf 2024 in Chicago this year was an amazing experi
 
 &nbsp;
 
-![Stephanie Wilkinson, Yukihiro Matsumoto, Shannon Skipper](/images/matz.heic "Stephanie Wilkinson, Yukihiro Matsumoto, Shannon Skipper")
+![Stephanie Wilkinson, Yukihiro Matsumoto, Shannon Skipper](/images/matz.jpg "Stephanie Wilkinson, Yukihiro Matsumoto, Shannon Skipper")
 {: .rounded-xl .shadow .max-w-sm .overflow-hidden }
 
 Obligatory selfie with Matz (and [Shannon Skipper](https://shannonskipper.com))
