--- a/src/_posts/2024-12-12-RubyConf-2024.md
+++ b/src/_posts/2024-12-12-RubyConf-2024.md
@@ -11,7 +11,7 @@ What a blast! Attending RubyConf 2024 in Chicago this year was an amazing experi
 &nbsp;
 
 ![Stephanie Wilkinson, Yukihiro Matsumoto, Shannon Skipper](/images/matz.jpg "Stephanie Wilkinson, Yukihiro Matsumoto, Shannon Skipper")
-{: .rounded-xl .shadow .max-w-sm .overflow-hidden }
+{: .rounded-xl .shadow md:.max-w-sm .overflow-hidden }
 
 Obligatory selfie with Matz (and [Shannon Skipper](https://shannonskipper.com))
 
@@ -28,7 +28,7 @@ I talked to Ubicloud, below, who are building with Roda for compute services. Th
 &nbsp;
 
 ![Ubicloud and Stephanie Wilkinson](/images/ubicloud.jpg "Stephanie Wilkinson, Yukihiro Matsumoto, Shannon Skipper")
-{: .rounded-xl .shadow .max-w-sm .overflow-hidden }
+{: .rounded-xl .shadow md:.max-w-sm .overflow-hidden }
 Chatting with the Ubicloud team
 
 &nbsp;
@@ -45,7 +45,7 @@ Vinicius Stock discussed the state of Ruby dev tooling. Those of us who have enj
 &nbsp;
 
 ![Shannon Skipper at RubyConf 2024](/images/shannon_skipper_rubyconf_2024.jpg "Shannon Skipper at RubyConf 2024")
-{: .rounded-xl .shadow .max-w-sm .overflow-hidden }
+{: .rounded-xl .shadow md:.max-w-sm .overflow-hidden }
 Shannon Skipper had a great talk on WebTransport
 
 &nbsp;
@@ -65,13 +65,13 @@ Lastly, what a pleasure it was to spend time with friends! One of the best thing
 &nbsp;
 
 ![Stephanie Wilkinson, Shannon Skipper, Brandon Weaver, and Erin Weaver](/images/brandon_weaver.jpg "Stephanie Wilkinson, Shannon Skipper, Brandon Weaver, and Erin Weaver")
-{: .rounded-xl .shadow .max-w-sm .overflow-hidden }
+{: .rounded-xl .shadow md:.max-w-sm .overflow-hidden }
 
 
 &nbsp;
 
 ![Stephanie Wilkinson and Erin Behn](/images/erin.jpg "Stephanie Wilkinson and Erin Behn")
-{: .rounded-xl .shadow .max-w-sm .overflow-hidden }
+{: .rounded-xl .shadow md:.max-w-sm .overflow-hidden }
 
 &nbsp;
 
